Fix openapi.yml restful
