# backend/app/adapter/http/server.go
@@ -42,21 +42,19 @@ func Serve() {
 	r.HandleFunc("/health/readiness", controller.HealthController)
 	r.HandleFunc("/csrf-token", controller.CSRFTokenController)
 	r.HandleFunc("/login", controller.LoginController)
-	r.HandleFunc("/user", controller.UserController)
+	r.HandleFunc("/users", controller.UserController)
+	r.HandleFunc("/users/{user_name}", controller.UserController)
 	r.HandleFunc("/user-activation/{user_name}/{activation_key}", controller.UserController)
 	r.HandleFunc("/password", controller.PasswordController)
 	r.HandleFunc("/password-reset-email", controller.PasswordController)
 	r.HandleFunc("/password-reset", controller.PasswordController)
-	r.HandleFunc("/posting", controller.PostingController)
 	r.HandleFunc("/postings", controller.PostingController)
-	r.HandleFunc("/posting/{posting_id}", controller.PostingController)
-	r.HandleFunc("/like", controller.LikeController)
-	r.HandleFunc("/like/{posting_id}", controller.LikeController)
-	r.HandleFunc("/comment", controller.CommentController)
+	r.HandleFunc("/postings/{posting_id}", controller.PostingController)
+	r.HandleFunc("/likes/{posting_id}", controller.LikeController)
+	r.HandleFunc("/comments/{posting_id}", controller.CommentController)
 	r.HandleFunc("/comments", controller.CommentController)
-	r.HandleFunc("/comment/{comment_id}", controller.CommentController)
-	r.HandleFunc("/follow", controller.FollowController)
-	r.HandleFunc("/follow/{followed_user_name}", controller.FollowController)
+	r.HandleFunc("/comments/{comment_id}", controller.CommentController)
+	r.HandleFunc("/follows/{followed_user_name}", controller.FollowController)
 
 	// graceful shutdown
 	server := &http.Server{Addr: fmt.Sprintf(":%v", 80), Handler: r}
